--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,11 +17,14 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
 }
+/* 
+body {
+  /* @apply bg-black text-white min-h-screen font-poppins; */
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+
+
+.backdrop-blur-sm {
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
 }
